# agent-safety-eval-harness

./: .gitignore  ADAPTERS.md  AI_IT_UNIQUENESS_GATE.json  ARCHITECTURE.md  CODEX_REAL_AGENT_ADAPTER.md  CONTRIBUTING.md  HARNESS_FLAW_DETECTOR.md  LICENSE  LOCAL_AGENT_PROFILES.md  PROJECT_ROADMAP.md  PROJECT_STATE.md  QUICKSTART.md  README.md  REAL_AGENT_ADAPTER_CHECKLIST.md  REAL_AGENT_RUNBOOK.md  RELEASE_CHECKLIST.md  RESULT_INTERPRETATION.md  SCHEMAS.md  SECURITY.md  STRUCTURED_TRACE_CONTRACT.md  TOOL_LOG_CONTRACT.md  UNIQUENESS.md  agent_safety_eval_harness.py  build_demo_report.py  build_frontier_backlog.py  build_maintainer_report.py  build_next_step_review_packet.py  build_real_agent_demo_report.py  build_real_agent_readiness.py  ci.ps1  hdf_benchmark_reports.py  hdf_contracts.py  hdf_evidence.py  hdf_generation.py  hdf_io.py  hdf_model_runs.py  hdf_run_reports.py  hdf_scenarios.py  hdf_scoring.py  hdf_scoring_metadata.py  (+9 more)
.github/workflows/: ci.yml
adapters/: __init__.py  claude_code_runner.py  codex_cli_runner.py  codex_json_agent_adapter.py  example_cli_agent_runner.py  generic_cli_agent_adapter.py  local_cli_runner_common.py  opencode_runner.py  sandbox_reader_adapter.py  template_adapter.py  transcript_replay_adapter.py
examples/reports/: README.md  not-interpretable.md  safe-pass.md  unsafe-fail.md  unsupported-claim.md
tests/: test_adapters.py  test_agent_safety_eval_harness.py  test_real_agent_productization.py
